# lulang

./: .gitignore  Cargo.toml  DESIGN.md  KNOWN-ISSUES.md  M8-PLAN.md  README.md  ROADMAP-AUDIT.md  ROADMAP.md  SPEC.md  ae-research.md  scratch_sc.lu
.github/workflows/: observatory.yml
benchmarks/: README.md  embedded.tsv  environment.json  observatory.tsv  run_observatory.py
benchmarks/ir/: bench_dot.ll  bench_slerp.ll
corpus/: alcubierre.cpp  alcubierre.lu  alcubierre.ts  alcubierre_obj.ts  bench_dot.cpp  bench_dot.jl  bench_dot.lu  bench_dot.py  bench_dot.rs  bench_dot.ts  bench_qnorm.cpp  bench_qnorm.lu  bench_qnorm.ts  bench_slerp.cpp  bench_slerp.jl  bench_slerp.lu  bench_slerp.py  bench_slerp.rs  bench_slerp.ts  dot.lu  ffi_cbrt.lu  ffi_pointer.lu  kernel_saxpy.lu  slerp.lu
crates/lu/: Cargo.toml
crates/lu_check/: Cargo.toml
crates/lu_check/src/: lib.rs
crates/lu_ir/: Cargo.toml
crates/lu_ir/src/: lib.rs
crates/lu_jit/: Cargo.toml
crates/lu_jit/src/: lib.rs
crates/lu_llvm/: Cargo.toml
crates/lu_llvm/src/: lib.rs
crates/lu_syntax/: Cargo.toml
crates/lu_syntax/src/: lib.rs
crates/lu_test/: Cargo.toml
crates/lu_test/src/: lib.rs
editors/tree-sitter-lulang/: grammar.js  package.json
editors/tree-sitter-lulang/queries/: highlights.scm
editors/vscode/: extension.js  language-configuration.json  package.json
editors/vscode/snippets/: lulang.json
editors/vscode/syntaxes/: lulang.tmLanguage.json
examples/: embedded_slerp.h  embedded_slerp.json  embedded_slerp.lu  lulang_embedded.ipynb  run_embedded_notebook.py
experiments/: RESULTS.md  alcubierre.sh  bench.cpp  bench.ts
lib/lu-numerics/: README.md  integrate.lu  linalg.lu  lu.toml  statistics.lu  test_numerics.py  vector.lu
lib/lu-numerics/benchmarks/: functions.tsv  history.csv
lib/lu-numerics/comparisons/: functions.tsv  numerics.cpp  numerics.jl  numerics.py
lib/lu-numerics/src/: lib.lu  main.lu
lib/lu-numerics/tests/: laws.lu
lib/ludiff/: README.md  lu.toml
lib/ludiff/benchmarks/: history.csv
lib/ludiff/src/: lib.lu  main.lu
lib/ludiff/tests/: laws.lu
lib/luimage/: README.md  lu.toml  run_preview.sh
lib/luimage/benchmarks/: history.csv
lib/luimage/examples/: render.c
lib/luimage/src/: lib.lu  main.lu
lib/luphysics/: README.md  lu.toml  run_raylib.sh
lib/lutelegram/: .gitignore  Makefile  README.md  lu.toml  run_echo_bot.sh
playground/: README.md  package-lock.json  package.json
playground/.openai/: hosting.json
playground/app/: globals.css  layout.tsx  page.tsx  playground.tsx
playground/tests/: rendered-html.test.mjs
playground/worker/: index.ts
python/pylulang/: pyproject.toml
python/pylulang/pylulang/: __init__.py
python/pylulang/tests/: test_pylulang.py
selfhost/: build.sh  checker.lu  codegen.lu  interp.lu  lexer.lu  parser.lu
src/: abi.rs  ast.rs  benchmark.rs  bindgen.rs  cheader.rs  check.rs  docgen.rs  ffi.rs  fmt.rs  interp.rs  ir.rs  jit.rs  lexer.rs  llvm.rs  lu_runtime.c  main.rs  module_system.rs  package.rs  parser.rs  runtime.rs  sdk.rs  sdk_extra.rs
src/backend/: abi.rs  layout.rs  mod.rs  optimization.rs
tests/: abi.rs  bindgen.rs  conformance.rs  docs.rs  ffi_export.rs  frontend_perf.rs  lsp.rs  ludiff.rs  luimage.rs  luphysics.rs  numerics.rs  package.rs  pylulang.rs  regressions.rs  sdk.rs  selfhost_sync.rs  wasm.rs
tests/fixtures/: bindgen_runtime.c  bindgen_runtime.h  mini_bindgen.h  saxpy.c  saxpy.py
tools/: lulang_lsp.py  telegram_codegen.py  telegram_doc.py  verify_corpus.py
tools/tests/: test_lulang_lsp.py
(+15 files in other folders)
