[package]
name = "lu"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lu"
path = "../../src/main.rs"

[[test]]
name = "regressions"
path = "../../tests/regressions.rs"

[[test]]
name = "conformance"
path = "../../tests/conformance.rs"

[[test]]
name = "frontend_perf"
path = "../../tests/frontend_perf.rs"

[[test]]
name = "ffi_export"
path = "../../tests/ffi_export.rs"

[[test]]
name = "pylulang"
path = "../../tests/pylulang.rs"

[[test]]
name = "lsp"
path = "../../tests/lsp.rs"

[[test]]
name = "numerics"
path = "../../tests/numerics.rs"

[[test]]
name = "bindgen"
path = "../../tests/bindgen.rs"

[[test]]
name = "wasm"
path = "../../tests/wasm.rs"

[[test]]
name = "package"
path = "../../tests/package.rs"

[[test]]
name = "luphysics"
path = "../../tests/luphysics.rs"

[[test]]
name = "docs"
path = "../../tests/docs.rs"

[[test]]
name = "ludiff"
path = "../../tests/ludiff.rs"

[[test]]
name = "selfhost_sync"
path = "../../tests/selfhost_sync.rs"

[[test]]
name = "abi"
path = "../../tests/abi.rs"

[[test]]
name = "sdk"
path = "../../tests/sdk.rs"

[[test]]
name = "luimage"
path = "../../tests/luimage.rs"

[dependencies]
lu_syntax.workspace = true
lu_ir.workspace = true
lu_jit.workspace = true
lu_llvm.workspace = true
lu_test.workspace = true
