[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pylulang"
version = "0.1.0"
description = "Compile lulang numerical kernels and call them from Python"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.setuptools]
packages = ["pylulang"]
